--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="./css/normalize.css"/>
     <link rel="stylesheet" href="./css/fonts.css"/>
     <link rel="stylesheet" href="./css/styles.css"/>
+    <link rel="stylesheet" href="./css/custom.css"/>
   </head>
   <body>
     <div class="main-wrapper profile">
@@ -24,7 +25,7 @@
           <a href="#"><img class="social-icon" src="./assets/img/rss-icon.png"/></a>
         </div>
         <div class="vitals-text-container">
-          <h1 class="profile-name">Daniel Fenjves</h1>
+          <h1 class="profile-name">Anna Jones</h1>
           <h2 class="profile-location">New York, NY</h2>
           <div class="profile-quote">"Forget safety. Live where you fear to live. Destroy your reputation. Be notorious." - Rumi</div>
         </div>
